back to isBlank (cos I've got Java11 now)